cmake_minimum_required(VERSION 3.23)
project(SOLUTION CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(HEADERS
        ${CMAKE_CURRENT_SOURCE_DIR}/Solution.h
        )

set(SOURCES
        ${CMAKE_CURRENT_SOURCE_DIR}/Solution.cpp
        )


set(INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})


add_library(${PROJECT_NAME} ${HEADERS} ${SOURCES})

set(SOLUTION_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(SOLUTION_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)